--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^3.9.1",
     "firebase": "^9.9.4",
+    "firebase-tools": "^11.9.0",
     "material-ui-popup-state": "^4.0.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
